# nisargasoft0101

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  ARCHITECTURE_SIMPLE.md  CRITICAL_ISSUE.md  CURRENT_STATUS.md  DEPLOYMENT_STATUS.md  Dockerfile  LAUNCH.bat  QUICKSTART.md  README.md  START_REDIS.md  STOP.bat  VERCEL_UPDATE.md  celerybeat-schedule-shm  celerybeat-schedule-wal  check_settings.py  deploy_optimizations.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  scrapy.cfg  test_playwright.py  test_playwright_live.py  test_request.json  test_scraper.sh  test_scraper_verbose.sh
.github/workflows/: ci.yml
backend/app/: celery_app.py  config.py  db.py  events.py  location_profiles.py  logging.py  main.py  metrics.py  models.py  mongo.py  notifications.py  routes.py  schemas.py  tasks.py
backend/tests/: test_alerts.py  test_live_acquisition.py  test_market_insights.py  test_mongo_archive.py  test_product_filters.py
docs/: anti_blocking.md  architecture.md  submission_checklist.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
infra/alertmanager/: alertmanager.yml
infra/nginx/: nginx.conf
infra/prometheus/: alerts.yml  prometheus.yml
scraper/amazon_monitor/: middlewares.py  pipelines.py  runner.py  (+1 more)
scripts/: check_sellers.py  ec2_setup.sh  fix_availability_column.py  generate_analytics_report.py  seed_demo_data.py  setup_ssl.sh  verify_fixes.py
(+17 files in other folders)
